test/compilable/nodiscard_suppress.d
/*
REQUIRED_ARGS: -preview=nodiscard
*/
@nodiscard extern int func();

void ignore()
{
    cast(void) func();
}
