test/fail_compilation/fail263.d
// 2766

const byte[] A = [ cast(byte)0 ];
void f( byte* p){
}
void func(){
    f(A.ptr);
}

